--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -23,3 +23,11 @@ body {
 .cursor-pointer {
     cursor: pointer;
 }
+
+#root .esri-attribution__sources {
+    display: none;
+}
+
+#root .esri-ui .esri-attribution {
+    display: none;
+}
