--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,4 +1,5 @@
 @import 'calcite-web-1.2.5/css/calcite-web.min.css';
+@import 'https://js.arcgis.com/4.29/@arcgis/core/assets/esri/themes/dark/main.css';
 
 body {
     background: #031A39;
